// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-klaviyo destination: addProfileToList action - all fields 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "email": "odewaclon@fesijeho.hr",
      "external_id": "E3nNk",
      "first_name": "E3nNk",
      "image": "E3nNk",
      "last_name": "E3nNk",
      "location": Object {
        "address1": "E3nNk",
        "address2": "E3nNk",
        "city": "E3nNk",
        "country": "E3nNk",
        "latitude": "E3nNk",
        "longitude": "E3nNk",
        "region": "E3nNk",
        "zip": "E3nNk",
      },
      "organization": "E3nNk",
      "phone_number": "+7849197304",
      "properties": Object {
        "testType": "E3nNk",
      },
      "title": "E3nNk",
    },
    "type": "profile",
  },
}
`;

exports[`Testing snapshot for actions-klaviyo destination: addProfileToList action - batch keys 1`] = `
Object {
  "default": Array [
    "list_id",
  ],
  "description": "The keys to use for batching the events.",
  "label": "Batch Keys",
  "multiple": true,
  "required": false,
  "type": "string",
  "unsafe_hidden": true,
}
`;

exports[`Testing snapshot for actions-klaviyo destination: orderCompleted action - all fields 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "metric": Object {
        "data": Object {
          "attributes": Object {
            "name": "PE*zlOgIPA]mVozMLBaL",
          },
          "type": "metric",
        },
      },
      "profile": Object {
        "data": Object {
          "attributes": Object {
            "anonymous_id": "PE*zlOgIPA]mVozMLBaL",
            "email": "rafebezuv@micfeoz.zm",
            "external_id": "PE*zlOgIPA]mVozMLBaL",
            "phone_number": "+7552158559",
          },
          "type": "profile",
        },
      },
      "properties": Object {
        "testType": "PE*zlOgIPA]mVozMLBaL",
      },
      "time": "2021-02-01T00:00:00.000Z",
      "unique_id": "PE*zlOgIPA]mVozMLBaL",
      "value": 83414764297912.31,
    },
    "type": "event",
  },
}
`;

exports[`Testing snapshot for actions-klaviyo destination: removeProfile action - all fields 1`] = `""`;

exports[`Testing snapshot for actions-klaviyo destination: removeProfile action - batch keys 1`] = `
Object {
  "default": Array [
    "list_id",
  ],
  "description": "The keys to use for batching the events.",
  "label": "Batch Keys",
  "multiple": true,
  "required": false,
  "type": "string",
  "unsafe_hidden": true,
}
`;

exports[`Testing snapshot for actions-klaviyo destination: removeProfileFromList action - all fields 1`] = `""`;

exports[`Testing snapshot for actions-klaviyo destination: removeProfileFromList action - batch keys 1`] = `
Object {
  "default": Array [
    "list_id",
  ],
  "description": "The keys to use for batching the events.",
  "label": "Batch Keys",
  "multiple": true,
  "required": false,
  "type": "string",
  "unsafe_hidden": true,
}
`;

exports[`Testing snapshot for actions-klaviyo destination: subscribeProfile action - all fields 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "custom_source": "TsKr#",
      "profiles": Object {
        "data": Array [
          Object {
            "attributes": Object {
              "email": "ton@febmigi.bg",
              "phone_number": "+7659834885",
              "subscriptions": Object {
                "email": Object {
                  "marketing": Object {
                    "consent": "SUBSCRIBED",
                    "consented_at": "2021-02-01T00:00:00.000Z",
                  },
                },
                "sms": Object {
                  "marketing": Object {
                    "consent": "SUBSCRIBED",
                    "consented_at": "2021-02-01T00:00:00.000Z",
                  },
                },
              },
            },
            "type": "profile",
          },
        ],
      },
    },
    "relationships": Object {
      "list": Object {
        "data": Object {
          "id": "TsKr#",
          "type": "list",
        },
      },
    },
    "type": "profile-subscription-bulk-create-job",
  },
}
`;

exports[`Testing snapshot for actions-klaviyo destination: subscribeProfile action - batch keys 1`] = `
Object {
  "default": Array [
    "list_id",
    "custom_source",
  ],
  "description": "The keys to use for batching the events.",
  "label": "Batch Keys",
  "multiple": true,
  "required": false,
  "type": "string",
  "unsafe_hidden": true,
}
`;

exports[`Testing snapshot for actions-klaviyo destination: trackEvent action - all fields 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "metric": Object {
        "data": Object {
          "attributes": Object {
            "name": "mTdOx(Nl)",
          },
          "type": "metric",
        },
      },
      "profile": Object {
        "data": Object {
          "attributes": Object {
            "anonymous_id": "mTdOx(Nl)",
            "email": "atvilifo@rik.lr",
            "external_id": "mTdOx(Nl)",
            "phone_number": "+5694788449",
          },
          "type": "profile",
        },
      },
      "properties": Object {
        "testType": "mTdOx(Nl)",
      },
      "time": "2021-02-01T00:00:00.000Z",
      "unique_id": "mTdOx(Nl)",
      "value": -35080566000844.8,
    },
    "type": "event",
  },
}
`;

exports[`Testing snapshot for actions-klaviyo destination: unsubscribeProfile action - all fields 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "profiles": Object {
        "data": Array [
          Object {
            "attributes": Object {
              "email": "vej@ir.cz",
              "phone_number": "+3658066891",
              "subscriptions": Object {
                "email": Object {
                  "marketing": Object {
                    "consent": "UNSUBSCRIBED",
                  },
                },
                "sms": Object {
                  "marketing": Object {
                    "consent": "UNSUBSCRIBED",
                  },
                  "transactional": Object {
                    "consent": "UNSUBSCRIBED",
                  },
                },
              },
            },
            "type": "profile",
          },
        ],
      },
    },
    "relationships": Object {
      "list": Object {
        "data": Object {
          "id": "H*yKX0vG1",
          "type": "list",
        },
      },
    },
    "type": "profile-subscription-bulk-delete-job",
  },
}
`;

exports[`Testing snapshot for actions-klaviyo destination: unsubscribeProfile action - batch keys 1`] = `
Object {
  "default": Array [
    "list_id",
  ],
  "description": "The keys to use for batching the events.",
  "label": "Batch Keys",
  "multiple": true,
  "required": false,
  "type": "string",
  "unsafe_hidden": true,
}
`;

exports[`Testing snapshot for actions-klaviyo destination: upsertProfile action - all fields 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "email": "rob@cagtud.eu",
      "external_id": "$Fd4HHQmxNI0jTCTt(t",
      "first_name": "$Fd4HHQmxNI0jTCTt(t",
      "image": "$Fd4HHQmxNI0jTCTt(t",
      "last_name": "$Fd4HHQmxNI0jTCTt(t",
      "location": Object {
        "address1": "$Fd4HHQmxNI0jTCTt(t",
        "address2": "$Fd4HHQmxNI0jTCTt(t",
        "city": "$Fd4HHQmxNI0jTCTt(t",
        "country": "$Fd4HHQmxNI0jTCTt(t",
        "latitude": "$Fd4HHQmxNI0jTCTt(t",
        "longitude": "$Fd4HHQmxNI0jTCTt(t",
        "region": "$Fd4HHQmxNI0jTCTt(t",
        "zip": "$Fd4HHQmxNI0jTCTt(t",
      },
      "organization": "$Fd4HHQmxNI0jTCTt(t",
      "phone_number": "+9186705577",
      "properties": Object {
        "testType": "$Fd4HHQmxNI0jTCTt(t",
      },
      "title": "$Fd4HHQmxNI0jTCTt(t",
    },
    "type": "profile",
  },
}
`;

exports[`Testing snapshot for actions-klaviyo destination: upsertProfile action - batch keys 1`] = `
Object {
  "default": Array [
    "list_id",
    "override_list_id",
  ],
  "description": "The keys to use for batching the events.",
  "label": "Batch Keys",
  "multiple": true,
  "required": false,
  "type": "string",
  "unsafe_hidden": true,
}
`;
